--- a/backend/src/main/webapp/app/views/payment_to_us/main.html
+++ b/backend/src/main/webapp/app/views/payment_to_us/main.html
@@ -41,8 +41,8 @@
 												</div>
 											</form>
 											<div class="buttons control-label" style="text-align: left;" ng-show="!rowform.$visible">
-												<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ" ng-show="group0"></i>&nbsp; 
-												<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="group0"></i>&nbsp;
+												<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ"></i>&nbsp; 
+												<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>&nbsp;
 											</div>
 										</div>
 									</div>
@@ -117,11 +117,11 @@
 									<div class="col-xs-8">		
 										<div class="form-group" >
 											<label class="col-xs-4 control-label">ชื่อบัญชี</label>
-											<span class="form-control" style="color: #337AB7;">บริษัท เมตาคอม จำกัด</span>
+											<span class="form-control" style="color: #337AB7;">บจก. บริษัท เมตาคอม จำกัด</span>
 										</div>						
 										<div class="form-group" >
 											<label class="col-xs-4 control-label">สาขา</label>
-											<span class="form-control" style="color: #337AB7;">สยามพารากอน</span>
+											<span class="form-control" style="color: #337AB7;">เดอะมอลล์บางกะปิ</span>
 										</div>						
 										<div class="form-group" >
 											<label class="col-xs-4 control-label">ประเภทบัญชี</label>
@@ -129,7 +129,7 @@
 										</div>						
 										<div class="form-group" >
 											<label class="col-xs-4 control-label">เลขที่บัญชี</label>
-											<span class="form-control" style="color: #337AB7;">218-243631-5</span>
+											<span class="form-control" style="color: #337AB7;">449-1-80527-9</span>
 										</div>						
 									</div>
 	                        	</div>
@@ -154,18 +154,21 @@
 		                    <div class="row">
 			                    <div class="col-xs-6">
 			                    	<div style="color: #337AB7;">
-				                    	<span>บริษัท เทคโนโลยีแลนด์ จำกัด</span><br />
-				                    	<span>เลขประจำตัวผู้เสียภาษี: 0105551028207</span><br />
-				                    	<span>เลขที่ 47/171 หมู่ที่ 5 ซอยประชาอุทิศ 98 ถนนประชาอุทิศ-คู่สร้าง แขวง</span><br />
-				                    	<span>ทุ่งครุ เขตทุ่งครุ กรุงเทพมหานคร 10140</span>
+				                    	<span>บริษัท เมตาคอม จำกัด</span><br />
+				                    	<span>เลขประจำตัวผู้เสียภาษี: 0105560082898</span><br />
+				                    	<span>1122/26 บ้านเอื้ออาทรร่มเกล้า 2 อาคาร 23</span><br />
+				                    	<span>ชั้น 3 ห้อง 26 ถนน ราษฎร์พัฒนา</span><br />
+				                    	<span>แขวง คลองสองต้นนุ่น เขต ลาดกระบัง</span>
+				                    	<span>กรุงเทพมหานคร 10520</span>
 			                    	</div>
 			                    </div>
 			                    <div class="col-xs-6">
 			                    	<div style="color: #337AB7;">
-				                    	<span>บริษัท เทคโนโลยีแลนด์ จำกัด (Support Center)</span><br />
-				                    	<span>ชั้น 29, อาคาร The Offices at Central World</span><br />
-				                    	<span>999/9 ถนนพระราม 1 แขวงปทุมวัน เขตปทุมวัน</span><br />
-				                    	<span>กรุงเทพฯ 10330</span>
+				                    	<span>บริษัท เมตาคอม จำกัด</span><br />
+				                    	<span>1122/26 บ้านเอื้ออาทรร่มเกล้า 2 อาคาร 23</span><br />
+				                    	<span>ชั้น 3 ห้อง 26 ถนน ราษฎร์พัฒนา</span><br />
+				                    	<span>แขวง คลองสองต้นนุ่น เขต ลาดกระบัง</span>
+				                    	<span>กรุงเทพมหานคร 10520</span>
 			                    	</div>
 			                    </div>
 		                    </div>
