--- a/backend/src/main/webapp/app/views/payment_to_us/main.html
+++ b/backend/src/main/webapp/app/views/payment_to_us/main.html
@@ -65,7 +65,7 @@
 	                    </div>
                     	<div class="row">
 		                    <div class="col-xs-6">
-		                    	<label style="margin-top: 3px; margin-left: 10px;">การออกใบกำกับภาษี</label>
+		                    	<label style="margin-top: 3px; margin-left: 10px;">การออกใบเสร็จรับเงิน</label>
 		                    </div>
 		                    <div class="col-xs-6">
 		                    	<label style="margin-top: 3px;">ที่อยู่ส่งเอกสาร</label>
