--- a/backend/src/main/webapp/app/views/tools/fileConvert.html
+++ b/backend/src/main/webapp/app/views/tools/fileConvert.html
@@ -27,7 +27,7 @@
                        <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
                    </td>
                    <td nowrap>
-                       <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+                       <button type="button" class="btn btn-success btn-xs" ng-click="convert(item)" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
                            <span class="glyphicon glyphicon-upload"></span> Convert
                        </button>
                        <!-- <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
@@ -49,7 +49,13 @@
            </div>
            <div class="row">
 	            <div class="col-lg-12">
-	            	<input type="file" class="form-control pull-right" style="width: 300px;" nv-file-select="" uploader="uploader" />	  
+	            	<div class="form-inline pull-right">
+		            	<div class="form-group input-group" ng-show="isEncodingShow">
+						  	<span class="input-group-addon">Encoding</span>
+						  	<select name="column" class="form-control" ng-model="encoding" ng-options="option.code as option.name for option in encodings"></select>
+				  		</div>
+	            		<input type="file" class="form-control" nv-file-select="" uploader="uploader" />	  
+				  	</div>
 	            </div>
             </div>
          </div>
