--- a/backend/src/main/webapp/app/views/manage_notice/main.html
+++ b/backend/src/main/webapp/app/views/manage_notice/main.html
@@ -49,7 +49,7 @@
 									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 									  <div class="pull-right">
-									  	<button type="button" class="btn btn-outline btn-warning" ng-click="printBatchNotice()">พิมพ์</button>
+									  	<button type="button" class="btn btn-outline btn-warning" ng-click="printBatchNotice()" ng-show="group2">พิมพ์</button>
 									  </div>
 									</div>
 								</div>
