--- a/backend/src/main/webapp/app/views/db_backup_show/main.html
+++ b/backend/src/main/webapp/app/views/db_backup_show/main.html
@@ -23,10 +23,8 @@
 									<div class="col-lg-12">
 									
 									  <div class="form-group input-group">
-									  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-									  	<select name="column" class="form-control" ng-model="dir" ng-options="option as option for option in dirList" ng-change="search()">
-											<option value="">--ทั้งหมด--</option>
-								  		</select>
+									  	<span class="input-group-addon"><i class="fa fa-server"></i></span>
+									  	<select name="column" class="form-control" ng-model="dir" ng-options="option as option for option in dirList" ng-change="search()"></select>
 									  </div>
 									  
 									</div>
@@ -39,10 +37,10 @@
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
 								<tr>
-									<th style="white-space: nowrap; text-align: center; color: #337AB7;" width="20%">#</th>
-									<th style="white-space: nowrap; text-align: center;" width="80%">
-										File Name
-									</th>
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;" width="5%">#</th>
+									<th style="white-space: nowrap; text-align: center;" width="15%">Created Date</th>
+									<th style="white-space: nowrap; text-align: center;" width="15%">File Size(MB)</th>
+									<th style="white-space: nowrap; text-align: center;" width="65%">File Name</th>
 								</tr>
 							<thead>
 							<!-- <tbody class="noselect"> -->
@@ -53,8 +51,11 @@
 									<td style="vertical-align: middle; text-align: center;">
 										{{ $index + 1 }}
 									</td>
-									
-									<td style="vertical-align: middle; white-space: nowrap;">{{ data }}</td>
+									<td style="vertical-align: middle; text-align: center;">{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
+									<td style="vertical-align: middle; text-align: right;">{{ data.fileSize | number:2 }}</td>
+									<td style="vertical-align: middle; text-align: center;">
+										<a href="" title="Download" ng-click="download(data.fileName)">{{ data.fileName }}</a>
+									</td>
 								</tr>
 							</tbody>
 						</table>
