--- a/backend/src/main/webapp/app/views/db_backup_show/main.html
+++ b/backend/src/main/webapp/app/views/db_backup_show/main.html
@@ -40,7 +40,8 @@
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;" width="5%">#</th>
 									<th style="white-space: nowrap; text-align: center;" width="15%">Created Date</th>
 									<th style="white-space: nowrap; text-align: center;" width="15%">File Size(MB)</th>
-									<th style="white-space: nowrap; text-align: center;" width="65%">File Name</th>
+									<th style="white-space: nowrap; text-align: center;" width="55%">File Name</th>
+									<th style="white-space: nowrap; text-align: center;" width="10%"></th>
 								</tr>
 							<thead>
 							<!-- <tbody class="noselect"> -->
@@ -55,6 +56,9 @@
 									<td style="vertical-align: middle; text-align: right;">{{ data.fileSize | number:2 }}</td>
 									<td style="vertical-align: middle; text-align: center;">
 										<a href="" title="Download" ng-click="download(data.fileName)">{{ data.fileName }}</a>
+									</td>
+									<td style="vertical-align: middle; text-align: center;">
+										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteDb(data.fileName)" title="ลบ"></i>
 									</td>
 								</tr>
 							</tbody>
