--- a/backend/src/main/webapp/app/views/payment_to_us/main.html
+++ b/backend/src/main/webapp/app/views/payment_to_us/main.html
@@ -23,7 +23,8 @@
                     	<label>ข้อมูลของผู้ใช้บริการ [{{ companyName }}]</label>
                     </div>
 					<div class="panel-body">
-	                    <div class="well well-sm" style="margin-bottom: 0;">
+					
+	                    <!-- <div class="well well-sm" style="margin-bottom: 0;">
 	                    	<label><u>เลขที่บัญชีของผู้ใช้บริการ</u></label>
 	                        <div class="form-horizontal" style="padding-top: 15px;">
 		                        <div class="form-group" ng-repeat="item in items">
@@ -55,7 +56,9 @@
 								</button>
 							</div>
 	                    </div>
-	                    <div class="row"></div>
+	                    <div class="row"></div> -->
+	                    
+	                    
 	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
 	                    	<label style="margin-top: 3px;"><u>อีเมล์</u></label>
 	                    	<span style="color: #337AB7;">
@@ -94,9 +97,9 @@
 	                    </div>
                    </div>
                    <div class="panel-footer">
-                   	<small>
+                   	<!-- <small>
                    		<i>**กรุณากรอกเลขที่บัญชีที่ใช้โอนเงินค่าบริการ เพื่อใช้เป็นข้อมูลอ้างอิง*</i>
-                   	</small>
+                   	</small> -->
                    </div>
                 </div>
 			</div>
