--- a/backend/src/main/webapp/app/views/db_backup_show/main.html
+++ b/backend/src/main/webapp/app/views/db_backup_show/main.html
@@ -22,9 +22,15 @@
 								<div class="row">
 									<div class="col-lg-12">
 									
+									  <div class="btn-group pull-left" style="margin: 0px 5px 3px 0;">
+										<button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" 
+										        ng-class="{'active': mg.isActive}" ng-repeat="mg in menuGroup" ng-click="changeMg(mg)">{{ mg.name }}</button>
+									  </div>
+									
 									  <div class="form-group input-group">
 									  	<span class="input-group-addon"><i class="fa fa-server"></i></span>
-									  	<select name="column" class="form-control" ng-model="dir" ng-options="option as option for option in dirList" ng-change="search()"></select>
+									  	<select name="column" class="form-control" ng-model="dir" 
+									  	       ng-options="option as option for option in dirList" ng-change="search()" ng-disabled="isSystemFile"></select>
 									  </div>
 									  
 									</div>
