--- a/backend/src/main/webapp/app/views/db_backup_show/main.html
+++ b/backend/src/main/webapp/app/views/db_backup_show/main.html
@@ -60,7 +60,7 @@
 									</td>
 									<td style="vertical-align: middle; text-align: center;">{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 									<td style="vertical-align: middle; text-align: right;">{{ data.fileSize | number:2 }}</td>
-									<td style="vertical-align: middle; text-align: center;">
+									<td style="vertical-align: middle; text-indent: 25px;">
 										<a href="" title="Download" ng-click="download(data.fileName)">{{ data.fileName }}</a>
 									</td>
 									<td style="vertical-align: middle; text-align: center;">
