--- a/backend/src/main/webapp/app/lib/css/ctxSip.css
+++ b/backend/src/main/webapp/app/lib/css/ctxSip.css
@@ -1,5 +1,5 @@
 #sipClient {
-  background-color: #333;
+  background-color: #1A5276;
   font-size: 13px;
   line-height: 1.42857143;
   /* firefox 19+ */
@@ -13,8 +13,8 @@
 #sipClient .sipStatus {
   margin: 0 -15px 15px -15px;
   padding: 5px 15px;
-  background-color: #111;
-  color: #999;
+  background-color: #337AB7;
+  color: #E5E7E9;
 }
 #sipClient #txtCallStatus {
   color: #fff;
