--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -32,13 +32,13 @@
 			<div class="panel-body" style="padding: 6px;">
 				<div class="checkbox" style="margin: 0;">
 				    <label>
-				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseAccList" checked="checked">ซ่อน Account-List
+				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseAccList" checked="checked">ซ่อนบัญชี
 				    </label>&nbsp;
-				    <label>
+				    <!-- <label>
 				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseActionPanel">ซ่อน Action-Panel
-				    </label>
+				    </label> -->
 				    <label>
-				      &nbsp;<input type="checkbox" ng-model="isEditMode">Edit mode
+				      &nbsp;<input type="checkbox" ng-model="isEditMode">โหมดแก้ไข
 				    </label>
 			    </div>
 		  	</div>
