--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -62,8 +62,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<br />
-	<button type="button" class="btn btn-primary btn-circle" ng-click="addrObj.addItem()"><i class="fa fa-plus"></i></button>
+	<button type="button" class="btn btn-primary btn-circle" ng-click="addrObj.addItem()" style="margin-top: 10px;"><i class="fa fa-plus"></i></button>
 </div>
 					
                
