--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -1,55 +1,83 @@
-In progress
-<!-- <style>
+<style>
 .editable-wrap {
     width: 100%;
 }
+.editable-controls {
+	width: 100%;
+}
 </style>
 
-<div class="table-responsive">	
-	<table class="table table-striped table-hover" style="margin: 0;">
+<div class="panel panel-info" style="margin: 0;">
+	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+			{{'pagination.page' | translate}}: {{askModalObj.init.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ askModalObj.init.traceData.totalItems | number:0 }} {{'pagination.items' | translate}})
+		</span>
+		<pagination ng-change="askModalObj.pageChanged()" total-items="askModalObj.init.traceData.totalItems"
+					first-text="{{'pagination.first' | translate}}"
+					previous-text="{{'pagination.previous' | translate}}"
+					next-text="{{'pagination.next' | translate}}"
+					last-text="{{'pagination.last' | translate}}"
+					ng-model="askModalObj.init.currentPage" items-per-page="askModalObj.init.itemsPerPage"
+					max-size="askModalObj.init.maxSize" class="pagination-sm pull-right" boundary-links="true"
+					rotate="false" num-pages="numPages" style="margin: auto;" />
+		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="askModalObj.init.itemsPerPage" 
+					ng-change="askModalObj.changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+		</span>
+	</div>
+</div>
+
+<div class="table-responsive" style="padding: 0; min-height: 223px;">
+	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th style="width: 10%;">ประเภทที่อยู่</th>
-				<th>ที่อยู่ส่วนที่ 1</th>
-				<th>ที่อยู่ส่วนที่ 2</th>
-				<th>ที่อยู่ส่วนที่ 3</th>
-				<th>ที่อยู่ส่วนที่ 4</th>
-				<th>Tel.</th>
-				<th>Mobile</th>
-				<th>Fax</th>
-				<th style="width: 100px;"></th>
+				<th style="width: 3%; text-align: center;">#</th>
+				<th style="width: 10%; text-align: center;">วันที่บันทึก</th>
+				<th style="width: 10%; text-align: center;">ประเภทการชำระ</th>
+				<th style="width: 10%; text-align: center;">วันนัดจ่าย</th>
+				<th style="width: 10%; text-align: center;">ยอดนัดจ่าย</th>
+				<th style="width: 10%; text-align: center;">เปอร์เซ็นการจ่าย</th>
+				<th style="width: 10%; text-align: center;">ยอดจ่ายจริง</th>
+				<th style="text-align: center;">หมายเหตุ</th>
+				<th style="width: 80px; text-align: center;"></th>
 			</tr>
 		<thead>
 		<tbody>
-			<tr ng-repeat="item in addrObj.items" style="color: {{ item.traceId ? '#337AB7' : '#F1948A'  }};">
-				<td style="vertical-align: middle;">
-			        <span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span>
-			        <span editable-select="item.name" e-name="name" e-form="rowform" e-ng-options="n for n in addrObj.names">
-					    {{ item.name }}
+			<tr ng-repeat="item in addrObj.items">
+				<td style="white-space: nowrap; text-align: center;">
+					<span ng-show="item.id">
+						{{ $index + (addrObj.inserted ? 0 : 1) + ((askModalObj.init.currentPage - 1) * askModalObj.init.itemsPerPage) }}
 					</span>
+				</td>
+				<td style="vertical-align: middle;"></td>
+		      	<td style="vertical-align: middle;">
+			        <span editable-select="item.payType" e-name="payType" e-form="rowform" e-required e-ng-options="s for s in forecastObj.payType">
+			        	{{ item.addr1 }}
+			        </span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-textarea="item.addr1" e-name="addr1" e-form="rowform" e-placeholder="เลขที่ xxx ถ.xxx">{{ item.addr1 }}</span>
+		      		
+					  <!-- <input type="text" name="appointDate" class="form-control datepickerAppointPayDate"
+							   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="test"> -->
+					
+		      	
+			        <!-- <span editable-text="item.appointPayDate" e-name="appointPayDate" e-form="rowform" e-class="form-control datepickerAppointPayDate" e-readonly="readonly" e-date-parser="dd/MM/yyyy">
+			        	{{ item.addr2 }}
+			        </span> -->
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-textarea="item.addr2" e-name="addr2" e-form="rowform" e-placeholder="ต.xxx อ.xxx">{{ item.addr2 }}</span>
+			        <span editable-text="item.addr3" e-name="addr3" e-form="rowform" e-type="number">{{ item.addr3 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr3" e-name="addr3" e-form="rowform" e-placeholder="จ.xxx">{{ item.addr3 }}</span>
+			        <span editable-text="item.addr4" e-name="addr4" e-form="rowform" e-type="number">{{ item.addr4 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr4" e-name="addr4" e-form="rowform" e-placeholder="รหัสไปรษณี">{{ item.addr4 }}</span>
-		      	</td>
-		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.tel" e-name="tel" e-form="rowform">{{ item.tel }}</span>
+			        <span editable-text="item.tel" e-name="tel" e-form="rowform" e-type="number">{{ item.tel }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
 			        <span editable-text="item.mobile" e-name="mobile" e-form="rowform">{{ item.mobile }}</span>
 		      	</td>
-		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.fax" e-name="fax" e-form="rowform">{{ item.fax }}</span>
-		      	</td>
-		      	<td style="vertical-align: middle;">
+		      	<td style="vertical-align: middle; text-align: center;">
 		      		<form editable-form id="rowform" name="rowform" onbeforesave="addrObj.saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="addrObj.inserted == item">
 			          <i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : addrObj.cancelNewItem(item)" title="ยกเลิก"></i>&nbsp;
 			          <i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
@@ -57,14 +85,14 @@ In progress
 			        <div class="buttons" ng-show="!rowform.$visible">
 			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="addrObj.removeItem($index, item.id)" title="ลบ" ng-show="isEditable"></i>&nbsp;
 			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="isEditable"></i>&nbsp;
-			          <i class="fa fa-print fa-lg user-action-icon-primary" title="Print Notice" ng-hide="isDisableNoticePrintBtn" ng-click="noticeMenu(item.addr1 + '\n' + item.addr2 + '\n' + item.addr3 + '\n' + item.addr4)"></i>
 			        </div>  
 		      	</td>
 			</tr>
 		</tbody>
 	</table>
-	<br />
-	<button type="button" class="btn btn-primary btn-circle" ng-click="addrObj.addItem()"><i class="fa fa-plus"></i></button>
+	<button type="button" class="btn btn-primary btn-circle" ng-click="forecastObj.addItem()" ng-disabled="addrObj.inserted" style="margin-top: 10px;">
+		<i class="fa fa-plus"></i>
+	</button>
 </div>
 					
-                -->
+               
