--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -7,11 +7,10 @@
 }
 </style>
 
-<!-- <button type="button" class="btn btn-primary btn-circle" ng-click="askModal()" style="position: absolute; left: 495px; top: -35px;"><i class="fa fa-plus"></i></button> -->
 
-<button type="button" class="btn btn-primary" title="{{ isOutOfWorkingTime ? 'นอกเวลาทำงาน' : 'บันทึกผลการติดตาม' }}" style="padding: 5px 15px 5px 15px; position: absolute; left: 555px; top: -36px;" ng-click="askModal()" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0)">
+<!-- <button type="button" class="btn btn-primary" title="{{ isOutOfWorkingTime ? 'นอกเวลาทำงาน' : 'บันทึกผลการติดตาม' }}" style="padding: 5px 15px 5px 15px; position: absolute; left: 598px; top: -36px;" ng-click="askModal()" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0)">
 	<i class="fa fa fa-plus fa-1x"></i>
-</button>
+</button> -->
 
 <div class="panel panel-info" style="margin: 0;">
 	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
