--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -121,6 +121,12 @@
 		  </button>
 		</div>
 		
+		&nbsp;&nbsp;&nbsp;
+	  	<button type="button" class="btn btn-primary" title="{{ isOutOfWorkingTime ? 'นอกเวลาทำงาน' : 'บันทึกผลการติดตาม' }}" 
+	  		    style="padding: 5px 15px 5px 15px;" ng-click="askModal()" ng-show="lastTabActionMenuActive.id == 1" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0)">
+			<i class="fa fa fa-plus fa-1x"></i>
+		</button>
+		
 	</div>
 	<div class="col-lg-12" style="min-height: 315px;" ng-include="lastTabActionMenuActive.url"></div>
 </div>
