--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -12,17 +12,17 @@
 		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 			{{'pagination.page' | translate}}: {{askModalObj.init.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ askModalObj.init.traceData.totalItems | number:0 }} {{'pagination.items' | translate}})
 		</span>
-		<pagination ng-change="askModalObj.pageChanged()" total-items="askModalObj.init.traceData.totalItems"
+		<pagination ng-change="forecastObj.pageChanged()" total-items="forecastObj.totalItems"
 					first-text="{{'pagination.first' | translate}}"
 					previous-text="{{'pagination.previous' | translate}}"
 					next-text="{{'pagination.next' | translate}}"
 					last-text="{{'pagination.last' | translate}}"
-					ng-model="askModalObj.init.currentPage" items-per-page="askModalObj.init.itemsPerPage"
-					max-size="askModalObj.init.maxSize" class="pagination-sm pull-right" boundary-links="true"
+					ng-model="forecastObj.currentPage" items-per-page="forecastObj.itemsPerPage"
+					max-size="forecastObj.maxSize" class="pagination-sm pull-right" boundary-links="true"
 					rotate="false" num-pages="numPages" style="margin: auto;" />
 		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
-			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="askModalObj.init.itemsPerPage" 
-					ng-change="askModalObj.changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="forecastObj.itemsPerPage" 
+					ng-change="forecastObj.changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
 		</span>
 	</div>
 </div>
@@ -31,66 +31,61 @@
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th style="width: 3%; text-align: center;">#</th>
-				<th style="width: 10%; text-align: center;">วันที่บันทึก</th>
-				<th style="width: 10%; text-align: center;">ประเภทการชำระ</th>
-				<th style="width: 10%; text-align: center;">วันนัดจ่าย</th>
-				<th style="width: 10%; text-align: center;">ยอดนัดจ่าย</th>
-				<th style="width: 10%; text-align: center;">เปอร์เซ็นการจ่าย</th>
-				<th style="width: 10%; text-align: center;">ยอดจ่ายจริง</th>
+				<th style="width: 3%; text-align: center; white-space: nowrap;">#</th>
+				<th style="width: 13%; text-align: center; white-space: nowrap;">วันที่บันทึก</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">ประเภทการชำระ</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">วันนัดจ่าย</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">ยอดนัดจ่าย</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">เปอร์เซ็นการจ่าย</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">ยอดจ่ายจริง</th>
 				<th style="text-align: center;">หมายเหตุ</th>
 				<th style="width: 80px; text-align: center;"></th>
 			</tr>
 		<thead>
 		<tbody>
-			<tr ng-repeat="item in addrObj.items">
+			<tr ng-repeat="item in forecastObj.items">
 				<td style="white-space: nowrap; text-align: center;">
 					<span ng-show="item.id">
-						{{ $index + (addrObj.inserted ? 0 : 1) + ((askModalObj.init.currentPage - 1) * askModalObj.init.itemsPerPage) }}
+						{{ $index + (forecastObj.inserted ? 0 : 1) + ((forecastObj.currentPage - 1) * forecastObj.itemsPerPage) }}
 					</span>
 				</td>
-				<td style="vertical-align: middle;"></td>
-		      	<td style="vertical-align: middle;">
+				<td style="white-space: nowrap; vertical-align: middle; text-align: center;">{{ item.createdDateTime | date:gb_dateTimeFormat }}</td>
+		      	<td style="white-space: nowrap; vertical-align: middle;">
 			        <span editable-select="item.payType" e-name="payType" e-form="rowform" e-required e-ng-options="s for s in forecastObj.payType">
-			        	{{ item.addr1 }}
+			        	{{ item.payType }}
 			        </span>
 		      	</td>
-		      	<td style="vertical-align: middle;">
-		      		
-					  <!-- <input type="text" name="appointDate" class="form-control datepickerAppointPayDate"
-							   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="test"> -->
-					
-		      	
-			        <!-- <span editable-text="item.appointPayDate" e-name="appointPayDate" e-form="rowform" e-class="form-control datepickerAppointPayDate" e-readonly="readonly" e-date-parser="dd/MM/yyyy">
-			        	{{ item.addr2 }}
-			        </span> -->
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
+			        <span editable-text="item.appointPayDate" e-name="appointPayDate" e-form="rowform" e-class="form-control" e-readonly="readonly" e-date-parser="dd/MM/yyyy" e-my-datepicker="datePickerOptions">
+			        	{{ item.appointPayDate | date:gb_dateFormat }}
+			        </span>
 		      	</td>
-		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr3" e-name="addr3" e-form="rowform" e-type="number">{{ item.addr3 }}</span>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
+			        <span editable-text="item.appointPayAmount" e-name="appointPayAmount" e-form="rowform" e-type="number">{{ item.appointPayAmount | number:2 }}</span>
 		      	</td>
-		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr4" e-name="addr4" e-form="rowform" e-type="number">{{ item.addr4 }}</span>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
+			        <span editable-text="item.forecastPercentage" e-name="forecastPercentage" e-form="rowform" e-type="number">{{ item.forecastPercentage }}%</span>
 		      	</td>
-		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.tel" e-name="tel" e-form="rowform" e-type="number">{{ item.tel }}</span>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
+			        <span editable-text="item.forecastPercentage" e-name="paidAmount" e-form="rowform" e-type="number">{{ item.paidAmount | number:2 }}</span>
 		      	</td>
-		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.mobile" e-name="mobile" e-form="rowform">{{ item.mobile }}</span>
+		      	<td style="white-space: nowrap; vertical-align: middle;">
+			        <span editable-text="item.paidAmount" e-name="comment" e-form="rowform">{{ item.comment }}</span>
 		      	</td>
-		      	<td style="vertical-align: middle; text-align: center;">
-		      		<form editable-form id="rowform" name="rowform" onbeforesave="addrObj.saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="addrObj.inserted == item">
-			          <i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : addrObj.cancelNewItem(item)" title="ยกเลิก"></i>&nbsp;
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
+		      		<form editable-form id="rowform" name="rowform" onbeforesave="forecastObj.saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="forecastObj.inserted == item">
+			          <i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : forecastObj.cancelNewItem(item)" title="ยกเลิก"></i>&nbsp;
 			          <i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
 			        </form>
 			        <div class="buttons" ng-show="!rowform.$visible">
-			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="addrObj.removeItem($index, item.id)" title="ลบ" ng-show="isEditable"></i>&nbsp;
+			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="forecastObj.removeItem($index, item.id)" title="ลบ" ng-show="isEditable"></i>&nbsp;
 			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="isEditable"></i>&nbsp;
 			        </div>  
 		      	</td>
 			</tr>
 		</tbody>
 	</table>
-	<button type="button" class="btn btn-primary btn-circle" ng-click="forecastObj.addItem()" ng-disabled="addrObj.inserted" style="margin-top: 10px;">
+	<button type="button" class="btn btn-primary btn-circle" ng-click="forecastObj.addItem()" ng-disabled="forecastObj.inserted" style="margin-top: 10px; margin-left: 8px;">
 		<i class="fa fa-plus"></i>
 	</button>
 </div>
