--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -1,5 +1,5 @@
 <style>
-.editable-wrap {
+.fullwidth .editable-wrap {
     width: 100%;
 }
 .editable-controls {
@@ -34,6 +34,7 @@
 				<th style="width: 3%; text-align: center; white-space: nowrap;">#</th>
 				<th style="width: 13%; text-align: center; white-space: nowrap;">วันที่บันทึก</th>
 				<th style="width: 10%; text-align: center; white-space: nowrap;">ประเภทการชำระ</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">งวดที่ชำระ</th>
 				<th style="width: 10%; text-align: center; white-space: nowrap;">วันนัดชำระ</th>
 				<th style="width: 10%; text-align: center; white-space: nowrap;">ยอดนัดชำระ</th>
 				<th style="width: 10%; text-align: center; white-space: nowrap;">เปอร์เซ็นการชำระ</th>
@@ -51,26 +52,32 @@
 				</td>
 				<td style="white-space: nowrap; vertical-align: middle; text-align: center;">{{ item.createdDateTime | date:gb_dateTimeFormat }}</td>
 		      	<td style="white-space: nowrap; vertical-align: middle;">
-			        <span editable-select="item.payType" e-name="payType" e-form="rowform" e-required e-ng-options="s for s in forecastObj.payType">
-			        	{{ item.payType }}
+			        <span editable-select="item.payType" e-name="payType" e-form="rowform" e-required e-ng-options="s.id as s.name for s in forecastObj.payType" e-ng-change="forecastObj.changePayType($data, item)">
+			        	{{ item.payType ? (forecastObj.payType | filter:{id:item.payType})[0].name : ''}}
 			        </span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
-			        <span editable-text="item.appointPayDate" e-name="appointPayDate" e-form="rowform" e-class="form-control" e-readonly="readonly" e-date-parser="dd/MM/yyyy" e-my-datepicker="datePickerOptions">
+			        <span editable-text="item.round" e-name="round" e-type="number" e-form="rowform" e-ng-show="item.payType == 2" e-style="width: 50px;" e-title="งวดที่">
+			        	{{ item.payType == 2 ? ((item.round && item.totalRound) ? (item.round + '/' + item.totalRound) : '') : '-' }}
+			        </span>&nbsp;
+			        <span editable-text="item.totalRound" e-name="totalRound" e-type="number" e-form="rowform" e-ng-show="item.payType == 2" e-style="width: 50px;" e-title="จำนวนงวดทั้งหมด"></span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
+			        <span editable-text="item.appointDate" e-name="appointDate" e-form="rowform" e-class="form-control" e-readonly="readonly" e-date-parser="dd/MM/yyyy" e-my-datepicker="datePickerOptions">
 			        	{{ item.appointDate | date:gb_dateFormat }}
 			        </span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
-			        <span editable-text="item.appointPayAmount" e-name="appointPayAmount" e-form="rowform" e-type="number">{{ item.appointAmount | number:2 }}</span>
+			        <span editable-text="item.appointAmount" e-name="appointAmount" e-form="rowform" e-type="number">{{ item.appointAmount | number:2 }}</span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
 			        <span editable-text="item.forecastPercentage" e-name="forecastPercentage" e-form="rowform" e-type="number">{{ item.forecastPercentage ? (item.forecastPercentage + '%') : '' }}</span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
-			        <span editable-text="item.forecastPercentage" e-name="paidAmount" e-form="rowform" e-type="number">{{ item.paidAmount ? (item.paidAmount | number:2) : '' }}</span>
+			        <span editable-text="item.paidAmount" e-name="paidAmount" e-form="rowform" e-type="number">{{ item.paidAmount ? (item.paidAmount | number:2) : '' }}</span>
 		      	</td>
-		      	<td style="white-space: nowrap; vertical-align: middle;">
-			        <span editable-text="item.paidAmount" e-name="comment" e-form="rowform">{{ item.comment }}</span>
+		      	<td style="white-space: nowrap; vertical-align: middle;" class="fullwidth">
+			        <span editable-text="item.comment" e-name="comment" e-form="rowform">{{ item.comment }}</span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
 		      		<form editable-form id="rowform" name="rowform" onbeforesave="forecastObj.saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="forecastObj.inserted == item">
