--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -52,15 +52,15 @@
 				</td>
 				<td style="white-space: nowrap; vertical-align: middle; text-align: center;">{{ item.createdDateTime | date:gb_dateTimeFormat }}</td>
 		      	<td style="white-space: nowrap; vertical-align: middle;">
-			        <span editable-select="item.payTypeId" e-name="payTypeId" e-form="rowform" e-required e-ng-options="s.id as s.name for s in forecastObj.payTypeList" e-ng-change="forecastObj.changePayType($data, item)">
+			        <span editable-select="item.payTypeId" e-name="payTypeId" e-form="rowform" e-required e-ng-options="s.id as s.name for s in forecastObj.payTypeList" e-ng-change="item.payTypeId = $data">
 			        	{{ item.payTypeId ? (forecastObj.payTypeList | filter:{id:item.payTypeId})[0].name : ''}}
 			        </span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
-			        <span editable-text="item.round" e-name="round" e-type="number" e-form="rowform" e-ng-show="item.payType == 2" e-style="width: 50px;" e-title="งวดที่">
-			        	{{ item.payType == 2 ? ((item.round && item.totalRound) ? (item.round + '/' + item.totalRound) : '') : '-' }}
+			        <span editable-text="item.round" e-name="round" e-type="number" e-form="rowform" e-ng-show="item.payTypeId == 2" e-style="width: 50px;" e-title="งวดที่">
+			        	{{ item.payTypeId == 2 ? ((item.round && item.totalRound) ? (item.round + '/' + item.totalRound) : '') : '-' }}
 			        </span>&nbsp;
-			        <span editable-text="item.totalRound" e-name="totalRound" e-type="number" e-form="rowform" e-ng-show="item.payType == 2" e-style="width: 50px;" e-title="จำนวนงวดทั้งหมด"></span>
+			        <span editable-text="item.totalRound" e-name="totalRound" e-type="number" e-form="rowform" e-ng-show="item.payTypeId == 2" e-style="width: 50px;" e-title="จำนวนงวดทั้งหมด"></span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
 			        <span editable-text="item.appointDate" e-name="appointDate" e-form="rowform" e-class="form-control" e-readonly="readonly" e-date-parser="dd/MM/yyyy" e-my-datepicker="datePickerOptions">
